添加打包插件配置